--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
             Failure is not an option
           </h2>
           <h3 class="post-subtitle">
-            Many say exploration is part of our destiny, but it’s actually our duty to future generations.
+            Many say exploration is part of our destiny, but it's actually our duty to future generations.
           </h3>
         </a>
         <p class="post-meta">Posted by
